--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,7 @@
 *.app
 
 # Binaries
-**/bin/
-bin-int/
+bin/
 
 # Visual Studio files and folders
 .vs/
@@ -45,3 +44,10 @@ bin-int/
 
 # VSCode files and folders
 .vscode/
+
+# Logs
+logs/
+
+# Other files
+*.user
+*.DS_STORE
